import "yt/yt_proto/yt/formats/extension.proto";

message TLoginRecord
{
    optional string name = 1 [(NYT.column_name) = "name"];
    optional string login = 2 [(NYT.column_name) = "login"];
}

message TNameStatistics
{
    optional string name = 1 [(NYT.column_name) = "name"];
    optional uint64 count = 2 [(NYT.column_name) = "count"];
}
